# correctionlib

./: .buildinfo  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  Config.cmake.in  LICENSE  MANIFEST.in  Makefile  README.md  convert.html  convert.ipynb  convert.py  core.html  correctionlib_tutorial.html  correctionlib_tutorial.ipynb  demo.py  fromhisto.ipynb  genindex.html  highlevel.html  index.html  install.html  objects.inv  pyproject.toml  requirements.txt  schema.ipynb  schemav1.html  schemav2.html  search.html  searchindex.js  setup.cfg  setup.py  validate.py  validation.ipynb
.github/: CONTRIBUTING.md  dependabot.yml
.github/scripts/: summarize_benchmark.py
.github/workflows/: ci.yml  cvmfs-pr-comment.yml  docs.yml  pr_tests.yml  wheels.yml
_downloads/87e1187fe70c7ee30d50bbacaa2b2cb5/: schemav2.json
_downloads/e89659dda31baff2c9874440bdcad118/: schemav1.json
_generated/: correctionlib._core.CompoundCorrection.html  correctionlib._core.Correction.html  correctionlib._core.CorrectionSet.html  correctionlib._core.Variable.html  correctionlib.convert.from_histogram.html  correctionlib.convert.from_uproot_THx.html  correctionlib.convert.ndpolyfit.html  correctionlib.highlevel.Correction.html  correctionlib.highlevel.CorrectionSet.html
_sources/: convert.rst.txt  index.md.txt  index.rst.txt
_sources/_generated/: correctionlib._core.CompoundCorrection.rst.txt  correctionlib._core.Correction.rst.txt  correctionlib._core.CorrectionSet.rst.txt  correctionlib._core.Variable.rst.txt  correctionlib.convert.from_histogram.rst.txt  correctionlib.convert.from_uproot_THx.rst.txt  correctionlib.convert.ndpolyfit.rst.txt  correctionlib.highlevel.Correction.rst.txt  correctionlib.highlevel.CorrectionSet.rst.txt
binder/: correctionlib_tutorial.ipynb  mycorrections.json  requirements.txt
correctionlib/: schemav1.py
data/: conversion.py  corrections.json  schemav1.json  schemav2.json
docs/: Makefile  conf.py  convert.rst  core.rst  correctionlib_tutorial.ipynb  highlevel.rst  index.md  index.rst  install.md  schemav1.rst  schemav2.rst
include/: .gitignore  correction.h  version.h.in
src/: correction.cc  correction_detail.h  demo.cc  detail_impl.cc  formula_ast.cc  gzfilereadstream.h  lwtnn.cc  lwtnn_demo.cc  python.cc
src/correctionlib/: JSONEncoder.py  __init__.py  binding.py  cli.py  convert.py  highlevel.py  schemav1.py  schemav2.py  util.py
src/correctionlib/_core/: __init__.pyi
tests/: test_binding.py  test_compound.py  test_core.py  test_core_valid.py  test_core_vect.py  test_cvmfs.py  test_formula_ast.py  test_gzip.py  test_hashprng.py  test_highlevel.py  test_issue058.py  test_issue208.py  test_issue217.py  test_issue250.py  test_issue268.py  test_issue296.py  test_issue298.py  test_issue6.py  test_jsonencoder.py  test_lwtnn.py  test_ndpolyfit.py  test_package.py  test_switch.py  test_transform_nested.py  test_unique.py
tests/data/: lwtnn_example.json
