[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",
    "pybind11>=2.6.1",
    "scikit-build>=0.12",
    "cmake>=3.11.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/correctionlib/version.py"

[tool.cibuildwheel]
skip = ["pp*-*"]
test-extras = "test"
test-command = "python -m pytest {package}/tests"
# When cpython 3.7 is dropped we can ignore i686 (numpy not built)
test-skip = ["pp*-*", "*-musllinux_*", "cp3{10,11,12}-win32", "cp3{8,9,10,11,12}-manylinux_i686"]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"

[tool.cibuildwheel.environment]
# this makes sure that we build only on platforms that have a corresponding numpy wheel
PIP_ONLY_BINARY = ":all:"
