[build-system]
requires = [
    "setuptools_scm[toml]>=3.4",
    "pybind11>=2.6.1",
    "scikit-build-core>=0.8",
]
build-backend = "scikit_build_core.build"

[project]
name = "correctionlib"
dynamic = ["version"]
authors = [
    {name = "Nick Smith", email = "nick.smith@cern.ch"},
]
maintainers = [
    {name = "Nick Smith", email = "nick.smith@cern.ch"},
]
description = "A generic correction library"
readme = "README.md"
license = {text = "BSD-3-Clause"}
# keywords = []
classifiers = [
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.8"
dependencies = [
  "numpy >=1.13.3",
  "typing-extensions;python_version<'3.8'",
  "dataclasses;python_version<'3.7'",
  "pydantic >=2",
  "rich",
  "packaging",
]

[project.optional-dependencies]
test = [
  "pytest >=4.6",
  "scipy",
  "awkward >=2.2.2;python_version>'3.7'",
  "awkward <2;python_version<='3.7'",
  "dask-awkward >=2024.1.1;python_version>'3.7'",
  "dask <2025.4.0;python_version>'3.7'",
]
dev = [
  "pytest >=4.6",
  "pre-commit",
  "mypy",
  "uhi",
  "awkward >=2",
  "dask-awkward;python_version>'3.7'",
]
docs = [
  "recommonmark >=0.5.0",
  "Sphinx >=3.0.0",
  "sphinx_copybutton",
  "sphinx_rtd_theme >=0.5.0",
  "sphinx-jsonschema",
  "myst-parser",
  "nbsphinx",
]
convert = [
  "pandas",
  "uproot >=4.0.4",
  "requests",
  "scipy",
]

[project.scripts]
correction = "correctionlib.cli:main"

[project.urls]
Homepage = "https://github.com/cms-nanoAOD/correctionlib"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.version = ">=3.11.0"
sdist.include = ["src/correctionlib/version.py"]

[tool.scikit-build.cmake.define]
BUILD_DEMO = "OFF"

[tool.setuptools_scm]
write_to = "src/correctionlib/version.py"

[tool.cibuildwheel]
skip = ["pp*-*"]
test-extras = "test"
test-command = "python -m pytest {package}/tests"
# When cpython 3.7 is dropped we can ignore i686 (numpy not built)
test-skip = ["pp*-*", "*-musllinux_*", "cp3{10,11,12}-win32", "cp3{8,9,10,11,12}-manylinux_i686"]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"

[tool.cibuildwheel.environment]
# this makes sure that we build only on platforms that have a corresponding numpy wheel
PIP_ONLY_BINARY = ":all:"
