[build-system]
requires = [
    "setuptools_scm[toml]>=3.4",
    "pybind11>=2.6.1",
    "scikit-build-core>=0.8",
]
build-backend = "scikit_build_core.build"

[project]
name = "correctionlib"
dynamic = ["version"]
authors = [
    {name = "Nick Smith", email = "nick.smith@cern.ch"},
]
maintainers = [
    {name = "Nick Smith", email = "nick.smith@cern.ch"},
]
description = "A generic correction library"
readme = "README.md"
license = {text = "BSD-3-Clause"}
# keywords = []
classifiers = [
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.9"
dependencies = [
  "numpy >=1.13.3",
  "pydantic >=2",
  "rich",
  "packaging",
]

[project.optional-dependencies]
convert = [
  "pandas",
  "uproot >=4.0.4",
  "requests",
  "scipy",
]

[dependency-groups]
test = [
  "pandas",
  "uproot >=4.0.4",
  "requests",
  "scipy",
  "pytest >=6.0",
  "awkward >=2.2.2",
  "dask-awkward >=2024.1.1",
]
docs = [
  "recommonmark >=0.5.0",
  "Sphinx >=3.0.0",
  "sphinx_copybutton",
  "sphinx_rtd_theme >=0.5.0",
  "sphinx-jsonschema",
  "myst-parser",
  "nbsphinx",
  # to match binder/requirements.txt
  "awkward",
  "hist[plot]",
  "matplotlib",
  "ipykernel",
]
dev = [
  {include-group = "test"},
  {include-group = "docs"},
  "pre-commit",
  "mypy",
  "ruff",
  "uhi",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra"]
testpaths = ["tests"]

[tool.check-manifest]
ignore = [
  ".github/**",
  "docs/**",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  "src/*/version.py",
  "data/**",
  "Makefile",
  "cpp-peglib/**",
  "pybind11/**",
  "rapidjson/**",
]

[tool.mypy]
python_version = "3.9"
files = ["src"]

[[tool.mypy.overrides]]
module = ["awkward.*", "uproot.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["cppyy.*", "scipy.*"]
ignore_missing_imports = true

[tool.ruff.lint]
select = [
  "E",  # all errors
  "F",  # all pyflakes checks
  "I",  # import-related checks
]
ignore = [
  "E501", # line too long (comments and docstrings, code will be formatted with ruff)
]

[project.scripts]
correction = "correctionlib.cli:main"

[project.urls]
Homepage = "https://github.com/cms-nanoAOD/correctionlib"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.version = ">=3.11.0"
sdist.include = ["src/correctionlib/version.py"]

[tool.scikit-build.cmake.define]
BUILD_DEMO = "OFF"

[tool.setuptools_scm]
write_to = "src/correctionlib/version.py"

[tool.cibuildwheel]
skip = ["cp314t-*"]
test-groups = ["test"]
test-command = "python -m pytest {package}/tests"
test-skip = ["*-musllinux_*", "cp3{10,11,12}-win32", "cp*-win_arm64"]

[tool.cibuildwheel.environment]
# this makes sure that we build only on platforms that have a corresponding numpy wheel
PIP_ONLY_BINARY = ":all:"

[tool.codespell]
ignore-regex = "[A-Za-z0-9+/]{100,}"  # ignore long base64 strings
