[metadata]
name = correctionlib
author = Nick Smith
author_email = nick.smith@cern.ch
maintainer = Nick Smith
maintainer_email = nick.smith@cern.ch
description = A generic correction library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cms-nanoAOD/correctionlib
license = BSD 3-Clause License
# keywords =
platforms =
  Any
classifiers =
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  Operating System :: OS Independent
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Development Status :: 5 - Production/Stable

[options]
python_requires = >=3.6
install_requires =
  numpy >=1.13.3
  typing; python_version<"3.5"
  typing-extensions;python_version<"3.8"
  dataclasses;python_version<"3.7"
  pydantic <2,>=1.7.3
  rich
  packaging

[options.extras_require]
test =
  pytest >=4.6
  scipy
  awkward >=2;python_version>"3.7"
  awkward <2;python_version<="3.7"
  dask-awkward;python_version>"3.7"
dev =
  pytest >=4.6
  pre-commit
  mypy
  uhi
  awkward >=2
  dask-awkward;python_version>"3.7"
docs =
  recommonmark >=0.5.0
  Sphinx >=3.0.0
  sphinx_copybutton
  sphinx_rtd_theme >=0.5.0
  sphinx-jsonschema
  myst-parser
  nbsphinx
convert =
  pandas
  uproot >=4.0.4
  requests
  scipy

[options.entry_points]
console_scripts =
    correction = correctionlib.cli:main

[tool:pytest]
addopts = -rs -s -Wd
testpaths =
    tests

[check-manifest]
ignore =
  .github/**
  docs/**
  .pre-commit-config.yaml
  .readthedocs.yml
  src/*/version.py
  data/**
  Makefile
  cpp-peglib/**
  pybind11/**
  rapidjson/**

[flake8]
ignore = E203, E231, E501, E722, W503, B902, B905, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[mypy]
files = src
python_version = 3.8

[mypy-numpy]
ignore_missing_imports = True

[mypy-uproot]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True
